# spice_model_discontinuity_tui

./: .gitignore  README.md  app.py  config.yaml  config_handler.py  devices.py  find.py  main.py  plot.py  pyproject.toml  requirements.txt  run.sh  spice_cli.py
benchmarks/: bench_core.py
config_examples/: aggressive.yaml  config.toml  config.yaml  latest.yaml  minimal.yaml  simple.toml  simple.yaml
docs/: HIGHER_ORDER.md  ROBUST.md  SIMPLE.md  algorithms_study.md  code_overview.md  config_reference.md  performance_study.md  results_interpretation.md  sensitivity_50_study.md  sensitivity_study.md  user_guide.md
spice_cli/: __init__.py  devices.py  plot.py
spice_discontinuity/: __init__.py  find.py  generate.py  inject.py
tests/: test_cli.py  test_continuous.py
