[project]
name = "spice-discontinuity"
version = "0.1.0"
description = "Toolkit scaffold for finding, generating, and injecting SPICE simulation discontinuities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy", "matplotlib", "pandas"]

[project.scripts]
spice-find = "spice_cli:main"
