[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "spice-discontinuity"
version = "0.1.0"
description = "Toolkit scaffold for finding, generating, and injecting SPICE simulation discontinuities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
spice-find = "spice_cli:main"

[tool.uv.build-backend]
module-root = "."
module-name = ["spice_cli", "spice_discontinuity"]
